--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
                                 <button class="btn btn-outline-primary form-control" id="btn_/">/</button>
                             </div>
                             <div class="col">
+                                <button class="btn btn-outline-primary form-control" id="btn_*">*</button>
+                            </div>
+                            <div class="col">
                                 <button class="btn btn-outline-primary form-control" id="btn_calc">=</button>
                             </div>
                             <div class="col">
