--- a/index.html
+++ b/index.html
@@ -11,59 +11,65 @@
 <body>
 <div class="container">
     <div class="row calc-row align-items-center">
-        <div class="col col-md-4 offset-md-4">
+        <div class="col col-md-3 offset-md-3">
             <div class="form-group">
                 <div class="card" id="calc">
                     <div class="card-body">
-                        <input class="form-control input-window" id="inputWindow" value="">
+                        <input class="form-control input-window" id="inputWindow" value="0">
                         <div class="row no-gutters">
-                            <div class="col">
-                                <button class="btn btn-outline-danger form-control" id="btn_clr">C</button>
+                            <div class="col3">
+                                <button class="btn btn-outline-danger form-control" id="btn_clr" style="width: 88px">C</button>
                             </div>
-                            <div class="col">
+                            <div class="col1">
                                 <button class="btn btn-outline-primary form-control" id="btn_+">+</button>
                             </div>
-                            <div class="col">
+                            <div class="col1">
                                 <button class="btn btn-outline-primary form-control" id="btn_-">-</button>
                             </div>
-                            <div class="col">
+                            <div class="col1">
                                 <button class="btn btn-outline-primary form-control" id="btn_/">/</button>
                             </div>
-                            <div class="col">
+                            <div class="col1">
                                 <button class="btn btn-outline-primary form-control" id="btn_*">*</button>
                             </div>
-                            <div class="col">
-                                <button class="btn btn-outline-primary form-control" id="btn_calc">=</button>
+                            <div class="col1">
+                                <button class="btn btn-outline-primary form-control" id="btn_sqrt">√</button>
                             </div>
-                            <div class="col">
+                            <div class="col1">
+                                <button class="btn btn-outline-primary form-control" id="btn_minus" style="width: 35px; white-space: nowrap">-x</button>
+                            </div>
+                            <div class="col4">
                                 <button class="btn btn-outline-primary form-control" id="btn_1">1</button>
                             </div>
-                            <div class="col">
+                            <div class="col4">
                                 <button class="btn btn-outline-primary form-control" id="btn_2">2</button>
                             </div>
-                            <div class="col">
+                            <div class="col4">
                                 <button class="btn btn-outline-primary form-control" id="btn_3">3</button>
                             </div>
-                            <div class="col">
+                            <div class="col4">
                                 <button class="btn btn-outline-primary form-control" id="btn_4">4</button>
                             </div>
-                            <div class="col">
+                            <div class="col4">
                                 <button class="btn btn-outline-primary form-control" id="btn_5">5</button>
                             </div>
-                            <div class="col">
+                            <div class="col4">
                                 <button class="btn btn-outline-primary form-control" id="btn_6">6</button>
                             </div>
-                            <div class="col">
+                            <div class="col4">
                                 <button class="btn btn-outline-primary form-control" id="btn_7">7</button>
                             </div>
-                            <div class="col">
+                            <div class="col4">
                                 <button class="btn btn-outline-primary form-control" id="btn_8">8</button>
                             </div>
-                            <div class="col">
+                            <div class="col4">
                                 <button class="btn btn-outline-primary form-control" id="btn_9">9</button>
                             </div>
-                            <div class="col">
+                            <div class="col4">
                                 <button class="btn btn-outline-primary form-control" id="btn_0">0</button>
+                            </div>
+                            <div class="col2">
+                                <button class="btn btn-outline-success form-control" id="btn_calc" style="width: 119px">=</button>
                             </div>
                         </div>
                     </div>
